log/build_2025-04-21_01-19-27/eco_move/stderr.log
  File "/home/ws/cs1699-EcoBot/install/eco_move/lib/python3.10/site-packages/eco_move/move.py", line 1
    \# adapted from UGV given code and my old 1567 project
     ^
SyntaxError: unexpected character after line continuation character

